--- a/style.css
+++ b/style.css
@@ -34,12 +34,17 @@ img {
     border-radius: 50%;
 }
 
+
 .daniel img {
     border: 2px solid #A775F1;
 }
 
 .patrick img {
     border: 2px solid #733FC8;
+}
+
+.quoteImg img{
+    display: none;
 }
 
 .grad {
@@ -74,4 +79,106 @@ img {
 .patrick {
     background-color: #19202D;
     color: #E7EAEE
+}
+
+
+/* Tablet */
+@media (min-width: 768px) {
+    .container {
+        grid-template-rows: repeat(1fr, 4);
+        grid-template-columns: 1fr 1fr;
+        padding: 83px, 61px, 113px, 60px;
+    }
+
+    .quoteImg img {
+        display: inline-block;
+        width: 104px;
+        height: 102px;
+        border: none;
+        border-radius: 0;
+        position: absolute;
+        z-index: -1;
+        top: 75px;
+        right: 40%;
+    }
+
+    .daniel {
+        grid-row: 1;
+        grid-column: 1 / 3;
+        z-index: 1;
+    }
+
+    .jonathan {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .jeanette {
+        grid-row: 2;
+        grid-column: 2;
+    }
+
+    .patrick {
+        grid-row: 3;
+        grid-column: 1 / 3;
+    }
+    
+    .kira {
+        grid-row: 4;
+        grid-column: 1 / 3;
+    }
+}
+
+/* Desktop */
+@media (min-width: 1440px) {
+    body {
+        display: grid;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .container {
+        grid-template-rows: 291px 291px;
+        grid-template-columns: 255px 255px 255px 255px;
+        margin: 229px, 161px, 218px, 165px;
+    }
+
+    .quoteImg img {
+        display: inline-block;
+        width: 104px;
+        height: 102px;
+        border: none;
+        border-radius: 0;
+        position: absolute;
+        z-index: -1;
+        top: 28%;
+        left: 30%;
+    }
+
+    .daniel {
+        grid-row: 1;
+        grid-column: 1 / span 2;
+        z-index: 1;
+    }
+
+    .jonathan {
+        grid-row: 1;
+        grid-column: 3;
+    }
+
+    .jeanette {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .patrick {
+        grid-row: 2;
+        grid-column: 2 / span 2;
+    }
+    
+    .kira {
+        grid-row: 1 / span 2;
+        grid-column: 4;
+    }
 }
